feat(libobs): add module load progress callback API (IMP-01)
Add obs_set_module_load_progress_callback() to report per-module load status.
Callback invoked at begin/skip/fail/success points with zero overhead when unset.
Fully backward compatible. Verified with windows-x64 build & startup.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,10 @@ add_subdirectory(plugins)
 
 add_subdirectory(test/test-input)
 
+if(BUILD_TESTS AND OS_WINDOWS)
+  add_subdirectory(test/win)
+endif()
+
 add_subdirectory(frontend)
 
 message_configuration()
