feat(plugins/scene-3d-source): add core lifecycle, glTF/Draco loading, async GPU upload, and D3D11 color/alpha handling (IMP-03–06)
- IMP-03: Implemented obs_source_info callbacks, context struct, basic effect/video_render
- IMP-04: Integrated cgltf + Draco for KHR_draco_mesh_compression, fallback to standard accessors
- IMP-05: Added async worker queue, payload sync, video_tick upload trigger, safe cleanup
- IMP-06: Standardized sRGB texture/framebuffer handling and alpha blend state for D3D11

Added Uniflow GPL headers; verified basic loading/rendering on Windows.

Closes IMP-03, IMP-04, IMP-05, IMP-06

--- a/plugins/scene-3d-source/CMakeLists.txt
+++ b/plugins/scene-3d-source/CMakeLists.txt
@@ -23,7 +23,15 @@ cmake_minimum_required(VERSION 3.28...3.30)
 add_library(scene-3d-source MODULE)
 add_library(OBS::scene-3d-source ALIAS scene-3d-source)
 
-target_sources(scene-3d-source PRIVATE scene-3d-plugin.c scene-3d-source.c scene-3d-source.h)
+target_sources(
+  scene-3d-source
+  PRIVATE
+    scene-3d-plugin.c
+    scene-3d-source.c
+    scene-3d-source.h
+    scene-3d-gltf-loader.c
+    scene-3d-gltf-loader.h
+)
 
 target_link_libraries(scene-3d-source PRIVATE OBS::libobs $<$<PLATFORM_ID:Windows>:OBS::w32-pthreads>)
 
