feat: add multi-mesh gltf/glb rendering

--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -91,7 +91,7 @@ check_obs_websocket()
 add_obs_plugin(obs-x264)
 add_obs_plugin(oss-audio PLATFORMS FREEBSD OPENBSD)
 add_obs_plugin(rtmp-services)
-add_obs_plugin(scene-3d-source)
+add_obs_plugin(vspace-source)
 add_obs_plugin(sndio PLATFORMS LINUX FREEBSD OPENBSD)
 add_obs_plugin(text-freetype2)
 add_obs_plugin(vlc-video WITH_MESSAGE)
